# kustomizer

./: .dockerignore  .envrc  .gitignore  .sops.yaml  BUG.md  Cargo.toml  Dockerfile.alpine  Dockerfile.scratch  README.md  SHARED_TASK_NOTES.md  flake.nix  test.sh
kustomizer/: Cargo.toml  SESSION_PROGRESS.md  TEST_PORTING_CHECKLIST.md  TEST_PORTING_INVENTORY.md  TEST_PORTING_NOTES.md  TEST_PORTING_PLAN.md  test-1.sh  test-2.sh  test-3.sh  test.sh
kustomizer/benches/kustomizer/: main.rs
kustomizer/src/: build.rs  dbg.rs  fieldspec.rs  generator.rs  intern.rs  lib.rs  main.rs  manifest.rs  patch.rs  plugin.rs  res.rs  reslist.rs  resmap.rs  resource.rs  selector.rs  serde_ex.rs  transform.rs  visit.rs  yaml.rs
kustomizer/src/fieldspec/: builtin.rs  commonAnnotations.yaml  images.yaml  metadataLabels.yaml  name.yaml  namespace.yaml  otherLabels.yaml  replicas.yaml  subjects.yaml
kustomizer/src/generator/: common.rs  configmap.rs  function.rs  secret.rs
kustomizer/src/patch/openapi/: openapi-v2-kubernetes-1.32-minimized-pretty.json  openapi-v2-kubernetes-1.32-minimized.json  v2.rs
kustomizer/src/resource/: refs.rs  refspecs.yaml  shorthash.rs  view.rs
kustomizer/src/resource/shorthash/: tests.rs
kustomizer/src/transform/: annotation.rs  cleanup.rs  function.rs  image.rs  label.rs  name.rs  namespace.rs  patch.rs  refs.rs  replica.rs
kustomizer/tests/: TEST_TRACKING.md
kustomizer/tests/kustomizer/: main.rs
kustomizer/tests/kustomizer/testdata/additive-overlay/: configmap.yaml  expected.yaml
kustomizer/tests/kustomizer/testdata/ai-generated/: README.md
kustomizer/tests/kustomizer/testdata/base/: deployment.yaml  expected.yaml  output.yaml
kustomizer/tests/kustomizer/testdata/common-annotations/: kustomization.yaml  output.yaml
kustomizer/tests/kustomizer/testdata/common-labels-and-annotations/: kustomization.yaml  output.yaml
kustomizer/tests/kustomizer/testdata/component-affects-base/: error.stderr  kustomization.yaml  output.yaml
kustomizer/tests/kustomizer/testdata/configmap-generator-basic/: app.conf  config.properties  kustomization.yaml  output.yaml
kustomizer/tests/kustomizer/testdata/configmap-generator-custom-keys/: db.ini  kustomization.yaml  output.yaml  plain-file.txt  server.conf
kustomizer/tests/kustomizer/testdata/configmap-generator-mixed-sources/: config.txt  kustomization.yaml  output.yaml
kustomizer/tests/kustomizer/testdata/configmap-generator-with-options/: kustomization.yaml  output.yaml  settings.json
kustomizer/tests/kustomizer/testdata/deployment-env-merge/: base-deployment.yaml  env-patch.yaml  kustomization.yaml  output.yaml
kustomizer/tests/kustomizer/testdata/generator-references/: config.properties  daemonset.yaml  deployment.yaml  job.yaml  kustomization.yaml  output.yaml  pod.yaml  statefulset.yaml  test.yaml
kustomizer/tests/kustomizer/testdata/image-tag-transformer/: image-tag-transformer.yaml  kustomization.yaml  output.yaml  pod.yaml
kustomizer/tests/kustomizer/testdata/labels/: kustomization.yaml  output.yaml
kustomizer/tests/kustomizer/testdata/labels-include-selectors/: kustomization.yaml  output.yaml
kustomizer/tests/kustomizer/testdata/namespace-cluster-rbac/: clusterrole.yaml  kustomization.yaml  (+2 more)
(+1585 files in other folders)
