[package]
name = "kustomizer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.42", features = ["derive"] }
compact_str = { version = "0.9.0", features = ["serde"] }
dashmap = "6.1.0"
either = { version = "1.15.0", features = ["serde"] }
indexmap = { version = "2.10.0", features = ["serde"] }
json-patch = "4.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
