[package]
name = "kustomizer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-recursion = "1.1.1"
clap = { version = "4.5.42", features = ["derive"] }
compact_str = { version = "0.9.0", features = ["serde"] }
dashmap = "6.1.0"
either = { version = "1.15.0", features = ["serde"] }
futures-util = "0.3.31"
indexmap = { version = "2.10.0", features = ["serde"] }
json-patch = "4.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.142", features = ["preserve_order"] }
serde_yaml = "0.9.34"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "fs", "sync", "process", "io-util"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-tree = "0.4.0"
flate2 = { version = "1.1.2", default-features = false, features = ["zlib-rs"] }

dissimilar = "1.0.10"
sha256 = { version = "1.6.0", default-features = false }
base64 = "0.22.1"

[lints]
workspace = true

[dev-dependencies]
datatest-stable = "0.3.2"

[[test]]
name = "kustomizer"
harness = false

