[package]
name = "kustomizer"
version = "0.1.4"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-recursion = "1.1.1"
clap = { version = "4.5.42", features = ["derive"] }
compact_str = { version = "0.9.0", features = ["serde"] }
either = { version = "1.15.0", features = ["serde"] }
futures-util = "0.3.31"
indexmap = { version = "2.10.0", features = ["serde"] }
json-patch = "4.0.0"
serde = { version = "1.0.219", features = ["derive"] }
json = { version = "1.0.142", package = "serde_json", features = ["preserve_order"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "fs", "sync", "process", "io-util"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-tree = "0.4.0"
flate2 = { version = "1.1.2", default-features = false, features = ["zlib-rs"] }

dissimilar = "1.0.10"
sha256 = { version = "1.6.0", default-features = false }
base64 = "0.22.1"
regex = "1.11.2"
tracing-chrome = "0.7.2"
dashmap = "6.1.0"
serde-saphyr = "0.0.16"

[lints]
workspace = true

[dev-dependencies]
datatest-stable = "0.3.2"
divan = "0.1.21"

[[test]]
name = "kustomizer"
harness = false

[[bench]]
name = "kustomizer"
harness = false

